--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -48,9 +48,13 @@ jobs:
             | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
 
             IMAGE_URI="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY }}:latest"
-            docker pull $IMAGE_URI
+            
             docker stop backend || true
             docker rm backend || true
+            
+            docker image prune -af
+            
+            docker pull $IMAGE_URI
             docker run -d --name backend -p 80:8080 $IMAGE_URI
 
 #      - name: Deploy on Backend EC2
